<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/face_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height"/>


    <TextView
        android:id="@+id/tv_faceregister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_button_height"
        android:layout_below="@id/face_title"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/faceregister"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_size"/>

    <TextView
        android:id="@+id/tv_facedetect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_button_height"
        android:layout_below="@id/tv_faceregister"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/facedetect"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_size"/>

    <TextView
        android:id="@+id/tv_nfcregister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_button_height"
        android:layout_below="@id/tv_facedetect"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/nfcregister"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_size"/>

    <TextView
        android:id="@+id/tv_facelib"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_button_height"
        android:layout_below="@id/tv_nfcregister"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/facelib"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_size"/>

    <TextView
        android:id="@+id/tv_crash"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_button_height"
        android:layout_below="@id/tv_facelib"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/crashtest"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_size"/>

</RelativeLayout>
