<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height"/>

    <ScrollView
        android:id="@+id/form_login"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_title"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_name_hint"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_name_password"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorAccent"
                android:padding="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/btn_forgot_password"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorAccent"/>

                <Button
                    android:id="@+id/btn_forgot_register"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/register"
                    android:textColor="@color/colorAccent"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/margin_5"
                >

                <ImageView
                    android:id="@+id/iv_wechatregist"
                    android:src="@mipmap/ic_wechat"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    />

                <ImageView
                    android:id="@+id/iv_micblogregist"
                    android:src="@mipmap/ic_micblog"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_alignParentTop="true"
                    />

                <ImageView
                    android:id="@+id/iv_qqregist"
                    android:src="@mipmap/ic_qqchat"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginBottom="@dimen/margin_10"
                    />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>



</RelativeLayout>